fixed some mobile alignment

--- a/css/contant-us.css
+++ b/css/contant-us.css
@@ -6,7 +6,7 @@
   padding: 10px 15px;
   font-size: 18px;
   background: #f2f2f2;
-  margin-bottom: 5px;
+  margin-bottom: 8px;
   border-radius: 2px;
   border: none;
 }
